A12 Cupcake: Calculate price from order details

--- a/A12 Cupcake/app/src/main/res/layout/fragment_summary.xml
+++ b/A12 Cupcake/app/src/main/res/layout/fragment_summary.xml
@@ -122,6 +122,7 @@
                     style="@style/Widget.Cupcake.TextView.FinalPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{@string/total_price(viewModel.price)}"
                     android:layout_gravity="end"
                     android:layout_marginTop="@dimen/side_margin"
                     tools:text="Total $5.00" />
